--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,30 +2,31 @@
 accompanistFlowlayout = "<latest_version>"
 agp = "8.7.3"
 androidxCompiler = "1.5.15"
-androidxUi = "1.7.6"
+androidxUi = "1.7.8"
 coilCompose = "2.4.0"
 compiler = "1.5.15"
 compose-compiler = "1.5.4"
+composeShimmer = "1.3.2"
 daggerCompiler = "2.40"
-foundation = "1.7.6"
+foundation = "1.7.8"
 kotlin = "2.0.21"
 coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-kotlinStdlib = "2.0.21"
+kotlinStdlib = "2.1.0"
 lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.9.3"
-composeBom = "2024.12.01"
+activityCompose = "1.10.0"
+composeBom = "2025.02.00"
 lifecycleViewmodelCompose = "2.8.7"
-material = "1.7.6"
-roomCompiler = "2.6.1"
+material = "1.7.8"
 roomCompilerVersion = "2.6.1"
 roomKtx = "2.6.1"
-roomRuntime = "2.6.1"
-ui = "1.7.6"
-uiTooling = "1.7.6"
-uiToolingPreview = "1.7.6"
+
+ui = "1.7.8"
+uiTooling = "1.7.8"
+uiToolingPreview = "1.7.8"
+constraintlayoutComposeAndroid = "1.1.0"
 
 [libraries]
 accompanist-flowlayout = { module = "com.google.accompanist:accompanist-flowlayout", version.ref = "accompanistFlowlayout" }
@@ -37,11 +38,10 @@ androidx-material = { module = "androidx.compose.material:material", version.ref
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomCompilerVersion" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomKtx" }
-androidx-room-runtime-v250 = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coilCompose" }
+compose-shimmer = { module = "com.valentinilk.shimmer:compose-shimmer", version.ref = "composeShimmer" }
 dagger = { module = "com.google.dagger:dagger", version.ref = "daggerCompiler" }
-dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "daggerCompiler" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -60,6 +60,7 @@ ui = { module = "androidx.compose.ui:ui", version.ref = "ui" }
 ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "uiTooling" }
 ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "uiToolingPreview" }
 ui-v140 = { module = "androidx.compose.ui:ui", version.ref = "androidxUi" }
+androidx-constraintlayout-compose-android = { group = "androidx.constraintlayout", name = "constraintlayout-compose-android", version.ref = "constraintlayoutComposeAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
